--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,8 @@ a {
 }
 
 .btn-menu-xs:hover {
-  background-color: #3f4e6f;
+  background-color: #202436;
+  cursor: pointer;
 }
 
 .menu-lines {
@@ -918,8 +919,14 @@ p {
 #icon-headlines {
   display: flex;
   justify-content: space-around;
-  width: 100%;
-  text-transform: uppercase;
+}
+@media only screen and (min-width: 576px) {
+  #icon-headlines {
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    text-transform: uppercase;
+  }
 }
 @media screen and (-ms-high-contrast: none) {
   #icon-headlines {
@@ -935,23 +942,29 @@ p {
   width: -moz-max-content;
   width: max-content;
   height: 100px;
-  padding: 80px 40px;
   color: #52658F;
   text-align: center;
+  transform: scale(0.8);
+}
+@media only screen and (min-width: 576px) {
+  #icon-headlines .icon-headline-item {
+    transform: scale(1);
+    padding: 80px 40px;
+  }
 }
 #icon-headlines .icon-headline-item .icon-headline-text {
   display: block;
 }
 @media (min-width: 0px) {
   #icon-headlines .icon-headline-item .icon-headline-text {
-    font-size: 0.7rem;
+    font-size: 0.9rem;
     font-weight: 600;
     padding: 5px 0 0;
   }
 }
 @media (min-width: 767px) {
   #icon-headlines .icon-headline-item .icon-headline-text {
-    font-size: 0.9rem;
+    font-size: 1rem;
     font-weight: 600;
     padding: 10px 0 0;
   }
@@ -987,19 +1000,31 @@ p {
   margin: 0 10%;
 }
 #article p {
-  margin: 35px 80px;
+  margin: 20px;
+}
+@media only screen and (min-width: 576px) {
+  #article p {
+    margin: 35px 80px;
+  }
 }
 #article .circle-splash {
   position: relative;
-  padding: 65px 65px 25px;
   width: 300px;
-  height: 300px;
+  height: 220px;
 }
 @media (min-width: 0px) {
   #article .circle-splash {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    transform: scale(0.6);
+  }
+}
+@media only screen and (min-width: 576px) {
+  #article .circle-splash {
+    transform: scale(1);
+    padding: 65px 65px 25px;
+    height: 300px;
   }
 }
 @media (min-width: 767px) {
@@ -1077,9 +1102,15 @@ p {
   background-size: cover;
   border: solid 6px #52658F;
   border-radius: 50%;
+  transform: scale(0.7);
 }
 #products-carousel .product-5:hover, #products-carousel .product-4:hover, #products-carousel .product-3:hover, #products-carousel .product-2:hover, #products-carousel .product-1:hover {
   border: solid 6px #3f4e6f;
+}
+@media only screen and (min-width: 576px) {
+  #products-carousel .product-5, #products-carousel .product-4, #products-carousel .product-3, #products-carousel .product-2, #products-carousel .product-1 {
+    transform: scale(1);
+  }
 }
 #products-carousel .product-1 {
   background-image: url("../assets/images/products/breads.jpg");
@@ -1113,8 +1144,14 @@ p {
   background-color: #3f4e6f;
 }
 #products-carousel .owl-nav .owl-prev {
-  left: -60px;
-  top: 125px;
+  left: 10%;
+  top: 243px;
+}
+@media only screen and (min-width: 576px) {
+  #products-carousel .owl-nav .owl-prev {
+    left: -60px;
+    top: 125px;
+  }
 }
 #products-carousel .owl-nav .owl-prev span {
   position: absolute;
@@ -1122,13 +1159,22 @@ p {
   top: -3px;
 }
 #products-carousel .owl-nav .owl-next {
-  right: -60px;
-  top: 125px;
+  right: 10%;
+  top: 243px;
+}
+@media only screen and (min-width: 576px) {
+  #products-carousel .owl-nav .owl-next {
+    right: -60px;
+    top: 125px;
+  }
 }
 #products-carousel .owl-nav .owl-next span {
   position: absolute;
   right: 17px;
   top: -3px;
+}
+#products-carousel .owl-nav .owl-item {
+  transform: scale(0.7);
 }
 #products-carousel .button-container {
   width: 100%;
@@ -1138,19 +1184,34 @@ p {
 }
 #products-carousel .button {
   color: #F7F5E6;
-  width: 20rem;
-  height: 25px;
+  width: 10rem;
+  height: 20px;
   margin: 20px 0;
   padding: 10px;
   text-align: center;
   text-transform: uppercase;
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: 600;
   background-color: #52658F;
   border-radius: 25px;
 }
 #products-carousel .button:hover {
   background-color: #3f4e6f;
+}
+@media only screen and (min-width: 576px) {
+  #products-carousel .button {
+    font-size: 1.3rem;
+    width: 20rem;
+    height: 25px;
+  }
+}
+#products-carousel h2 {
+  margin-bottom: -35px;
+}
+@media only screen and (min-width: 576px) {
+  #products-carousel h2 {
+    margin-bottom: inherit;
+  }
 }
 
 #reviewsCarousel {
@@ -1202,7 +1263,12 @@ p {
   font-weight: 500;
 }
 #reviewsCarousel .owl-dot {
-  margin: 30px 18px;
+  margin: 1px;
+}
+@media only screen and (min-width: 576px) {
+  #reviewsCarousel .owl-dot {
+    margin: 30px 18px;
+  }
 }
 #reviewsCarousel .button-container {
   justify-content: center;
@@ -1212,19 +1278,26 @@ p {
 #reviewsCarousel .button {
   align-items: center;
   color: white;
-  width: 20rem;
-  height: 25px;
+  width: 10rem;
+  height: 20px;
   margin: 10px 0;
   padding: 10px;
   text-align: center;
   text-transform: uppercase;
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: 600;
   background-color: #F78731;
   border-radius: 25px;
 }
 #reviewsCarousel .button:hover {
   background-color: #ec6c09;
+}
+@media only screen and (min-width: 576px) {
+  #reviewsCarousel .button {
+    font-size: 1.3rem;
+    width: 20rem;
+    height: 25px;
+  }
 }
 #reviewsCarousel h2 {
   padding: 0 50px;
